# Setup the version.hpp file.
# Include this here because we need the GENERATED property on version.hpp and in CMake that property has directory
# scope
include(${PROJECT_SOURCE_DIR}/cmake/git_watcher.cmake)
# Sources and libraries shared among the different builds of the lib
set(
    SOURCES
    all_parameter_variant.cpp
    all_parameter_variant.hpp
    all_type_variant.cpp
    all_type_variant.hpp
    concurrency/commit_context.cpp
    concurrency/commit_context.hpp
    concurrency/transaction_context.cpp
    concurrency/transaction_context.hpp
    concurrency/transaction_manager.cpp
    concurrency/transaction_manager.hpp
    constant_mappings.cpp
    constant_mappings.hpp
    expression/abstract_expression.cpp
    expression/abstract_expression.hpp
    expression/abstract_predicate_expression.cpp
    expression/abstract_predicate_expression.hpp
    expression/aggregate_expression.cpp
    expression/aggregate_expression.hpp
    expression/arithmetic_expression.cpp
    expression/arithmetic_expression.hpp
    expression/expression_precedence.hpp
    expression/list_expression.cpp
    expression/list_expression.hpp
    expression/between_expression.cpp
    expression/between_expression.hpp
    expression/binary_predicate_expression.cpp
    expression/binary_predicate_expression.hpp
    expression/case_expression.cpp
    expression/case_expression.hpp
    expression/cast_expression.cpp
    expression/cast_expression.hpp
    expression/exists_expression.cpp
    expression/exists_expression.hpp
    expression/evaluation/expression_evaluator.cpp
    expression/evaluation/expression_evaluator.hpp
    expression/evaluation/expression_result.hpp
    expression/evaluation/expression_result_views.hpp
    expression/evaluation/expression_functors.hpp
    expression/evaluation/like_matcher.cpp
    expression/evaluation/like_matcher.hpp
    expression/expression_functional.cpp
    expression/expression_functional.hpp
    expression/expression_utils.cpp
    expression/expression_utils.hpp
    expression/extract_expression.cpp
    expression/extract_expression.hpp
    expression/function_expression.cpp
    expression/function_expression.hpp
    expression/in_expression.cpp
    expression/in_expression.hpp
    expression/is_null_expression.cpp
    expression/is_null_expression.hpp
    expression/logical_expression.cpp
    expression/logical_expression.hpp
    expression/lqp_column_expression.cpp
    expression/lqp_column_expression.hpp
    expression/lqp_select_expression.cpp
    expression/lqp_select_expression.hpp
    expression/unary_minus_expression.cpp
    expression/unary_minus_expression.hpp
    expression/parameter_expression.cpp
    expression/parameter_expression.hpp
    expression/pqp_column_expression.cpp
    expression/pqp_column_expression.hpp
    expression/pqp_select_expression.cpp
    expression/pqp_select_expression.hpp
    expression/value_expression.cpp
    expression/value_expression.hpp
    import_export/binary.hpp
    import_export/csv_converter.cpp
    import_export/csv_converter.hpp
    import_export/csv_meta.cpp
    import_export/csv_meta.hpp
    import_export/csv_parser.cpp
    import_export/csv_parser.hpp
    import_export/csv_writer.cpp
    import_export/csv_writer.hpp
    cost_model/abstract_cost_feature_proxy.cpp
    cost_model/abstract_cost_feature_proxy.hpp
    cost_model/abstract_cost_model.cpp
    cost_model/abstract_cost_model.hpp
    cost_model/cost_feature.cpp
    cost_model/cost_feature.hpp
    cost_model/cost_feature_lqp_node_proxy.cpp
    cost_model/cost_feature_lqp_node_proxy.hpp
    cost_model/cost_feature_operator_proxy.cpp
    cost_model/cost_feature_operator_proxy.hpp
    cost_model/cost.hpp
    cost_model/cost_model_logical.cpp
    cost_model/cost_model_logical.hpp
    logical_query_plan/abstract_lqp_node.cpp
    logical_query_plan/abstract_lqp_node.hpp
    logical_query_plan/alias_node.cpp
    logical_query_plan/alias_node.hpp
    logical_query_plan/aggregate_node.cpp
    logical_query_plan/aggregate_node.hpp
    logical_query_plan/create_view_node.cpp
    logical_query_plan/create_view_node.hpp
    logical_query_plan/delete_node.cpp
    logical_query_plan/delete_node.hpp
    logical_query_plan/drop_view_node.cpp
    logical_query_plan/drop_view_node.hpp
    logical_query_plan/dummy_table_node.cpp
    logical_query_plan/dummy_table_node.hpp
    logical_query_plan/enable_make_for_lqp_node.hpp
    logical_query_plan/insert_node.cpp
    logical_query_plan/insert_node.hpp
    logical_query_plan/join_node.cpp
    logical_query_plan/join_node.hpp
    logical_query_plan/limit_node.cpp
    logical_query_plan/limit_node.hpp
    logical_query_plan/logical_plan_root_node.cpp
    logical_query_plan/logical_plan_root_node.hpp
    logical_query_plan/lqp_column_reference.cpp
    logical_query_plan/lqp_column_reference.hpp
    logical_query_plan/lqp_translator.cpp
    logical_query_plan/lqp_translator.hpp
    logical_query_plan/lqp_utils.cpp
    logical_query_plan/lqp_utils.hpp
    logical_query_plan/mock_node.cpp
    logical_query_plan/mock_node.hpp
    logical_query_plan/predicate_node.cpp
    logical_query_plan/predicate_node.hpp
    logical_query_plan/projection_node.cpp
    logical_query_plan/projection_node.hpp
    logical_query_plan/show_columns_node.cpp
    logical_query_plan/show_columns_node.hpp
    logical_query_plan/show_tables_node.cpp
    logical_query_plan/show_tables_node.hpp
    logical_query_plan/sort_node.cpp
    logical_query_plan/sort_node.hpp
    logical_query_plan/stored_table_node.cpp
    logical_query_plan/stored_table_node.hpp
    logical_query_plan/union_node.cpp
    logical_query_plan/union_node.hpp
    logical_query_plan/update_node.cpp
    logical_query_plan/update_node.hpp
    logical_query_plan/validate_node.cpp
    logical_query_plan/validate_node.hpp
    null_value.hpp
    operators/abstract_join_operator.cpp
    operators/abstract_join_operator.hpp
    operators/abstract_operator.cpp
    operators/abstract_operator.hpp
    operators/abstract_read_only_operator.cpp
    operators/abstract_read_only_operator.hpp
    operators/abstract_read_write_operator.cpp
    operators/abstract_read_write_operator.hpp
    operators/aggregate/aggregate_traits.hpp
    operators/aggregate.cpp
    operators/aggregate.hpp
    operators/base_operator_performance_data.hpp
    operators/alias_operator.cpp
    operators/alias_operator.hpp
    operators/delete.cpp
    operators/delete.hpp
    operators/difference.cpp
    operators/difference.hpp
    operators/export_binary.cpp
    operators/export_binary.hpp
    operators/export_csv.cpp
    operators/export_csv.hpp
    operators/get_table.cpp
    operators/get_table.hpp
    operators/import_binary.cpp
    operators/import_binary.hpp
    operators/import_csv.cpp
    operators/import_csv.hpp
    operators/index_scan.cpp
    operators/index_scan.hpp
    operators/insert.cpp
    operators/insert.hpp
#    operators/jit_operator/jit_operations.hpp
#    operators/jit_operator/jit_types.cpp
#    operators/jit_operator/jit_types.hpp
    operators/join_hash.cpp
    operators/join_hash/hash_traits.hpp
    operators/join_hash.hpp
    operators/join_index.cpp
    operators/join_index.hpp
    operators/join_mpsm.cpp
    operators/join_mpsm.hpp
    operators/join_nested_loop.cpp
    operators/join_nested_loop.hpp
    operators/join_sort_merge/column_materializer.hpp
    operators/join_sort_merge.cpp
    operators/join_sort_merge.hpp
    operators/join_sort_merge/radix_cluster_sort.hpp
    operators/limit.cpp
    operators/limit.hpp
    operators/operator_scan_predicate.cpp
    operators/operator_scan_predicate.hpp
    operators/operator_join_predicate.cpp
    operators/operator_join_predicate.hpp
    operators/maintenance/create_view.cpp
    operators/maintenance/create_view.hpp
    operators/maintenance/drop_view.cpp
    operators/maintenance/drop_view.hpp
    operators/maintenance/show_columns.cpp
    operators/maintenance/show_columns.hpp
    operators/maintenance/show_tables.cpp
    operators/maintenance/show_tables.hpp
    operators/maintenance/show_tables.hpp
    operators/print.cpp
    operators/print.hpp
    operators/product.cpp
    operators/product.hpp
    operators/projection.cpp
    operators/projection.hpp
    operators/sort.cpp
    operators/sort.hpp
    operators/table_scan/base_single_column_table_scan_impl.cpp
    operators/table_scan/base_single_column_table_scan_impl.hpp
    operators/table_scan/base_table_scan_impl.hpp
    operators/table_scan/column_comparison_table_scan_impl.cpp
    operators/table_scan/column_comparison_table_scan_impl.hpp
    operators/table_scan.cpp
    operators/table_scan.hpp
    operators/table_scan/is_null_table_scan_impl.cpp
    operators/table_scan/is_null_table_scan_impl.hpp
    operators/table_scan/like_table_scan_impl.cpp
    operators/table_scan/like_table_scan_impl.hpp
    operators/table_scan/single_column_table_scan_impl.cpp
    operators/table_scan/single_column_table_scan_impl.hpp
    operators/table_wrapper.cpp
    operators/table_wrapper.hpp
    operators/union_all.cpp
    operators/union_all.hpp
    operators/union_positions.cpp
    operators/union_positions.hpp
    operators/update.cpp
    operators/update.hpp
    operators/validate.cpp
    operators/validate.hpp
    statistics/statistics_import_export.cpp
    statistics/statistics_import_export.hpp
    statistics/chunk_statistics/abstract_filter.hpp
    statistics/chunk_statistics/chunk_column_statistics.cpp
    statistics/chunk_statistics/chunk_column_statistics.hpp
    statistics/chunk_statistics/chunk_statistics.cpp
    statistics/chunk_statistics/chunk_statistics.hpp
    statistics/chunk_statistics/min_max_filter.hpp
    statistics/chunk_statistics/range_filter.hpp
    optimizer/optimizer.cpp
    optimizer/optimizer.hpp
    optimizer/strategy/abstract_rule.cpp
    optimizer/strategy/abstract_rule.hpp
    optimizer/strategy/chunk_pruning_rule.cpp
    optimizer/strategy/chunk_pruning_rule.hpp
    optimizer/strategy/constant_calculation_rule.cpp
    optimizer/strategy/constant_calculation_rule.hpp
    optimizer/strategy/index_scan_rule.cpp
    optimizer/strategy/index_scan_rule.hpp
    optimizer/strategy/join_detection_rule.cpp
    optimizer/strategy/join_detection_rule.hpp
    optimizer/strategy/predicate_pushdown_rule.cpp
    optimizer/strategy/predicate_pushdown_rule.hpp
    optimizer/strategy/predicate_reordering_rule.cpp
    optimizer/strategy/predicate_reordering_rule.hpp
    optimizer/strategy/rule_batch.cpp
    optimizer/strategy/rule_batch.hpp
    planviz/abstract_visualizer.hpp
    planviz/lqp_visualizer.cpp
    planviz/lqp_visualizer.hpp
    planviz/sql_query_plan_visualizer.cpp
    planviz/sql_query_plan_visualizer.hpp
    resolve_type.hpp
    scheduler/abstract_scheduler.hpp
    scheduler/abstract_task.cpp
    scheduler/abstract_task.hpp
    scheduler/current_scheduler.cpp
    scheduler/current_scheduler.hpp
    scheduler/job_task.cpp
    scheduler/job_task.hpp
    scheduler/node_queue_scheduler.cpp
    scheduler/node_queue_scheduler.hpp
    scheduler/operator_task.cpp
    scheduler/operator_task.hpp
    scheduler/processing_unit.cpp
    scheduler/processing_unit.hpp
    scheduler/task_queue.cpp
    scheduler/task_queue.hpp
    scheduler/topology.cpp
    scheduler/topology.hpp
    scheduler/worker.cpp
    scheduler/worker.hpp
    server/client_connection.cpp
    server/client_connection.hpp
    server/postgres_wire_handler.cpp
    server/postgres_wire_handler.hpp
    server/query_response_builder.cpp
    server/query_response_builder.hpp
    server/server.cpp
    server/server.hpp
    server/server_session.cpp
    server/server_session.hpp
    server/task_runner.hpp
    server/then_operator.hpp
    server/types.hpp
    server/use_boost_future.hpp
    server/use_boost_future_impl.hpp
    statistics/base_column_statistics.cpp
    statistics/base_column_statistics.hpp
    statistics/column_statistics.cpp
    statistics/column_statistics.cpp
    statistics/generate_table_statistics.cpp
    statistics/generate_table_statistics.hpp
    statistics/generate_column_statistics.cpp
    statistics/generate_column_statistics.hpp
    statistics/table_statistics.cpp
    statistics/table_statistics.hpp
    sql/abstract_cache.hpp
    sql/create_sql_parser_error_message.cpp
    sql/create_sql_parser_error_message.hpp
    sql/gdfs_cache.hpp
    sql/gds_cache.hpp
    sql/lru_cache.hpp
    sql/lru_k_cache.hpp
    sql/random_cache.hpp
    sql/parameter_id_allocator.cpp
    sql/parameter_id_allocator.hpp
    sql/sql_pipeline_builder.cpp
    sql/sql_pipeline_builder.hpp
    sql/sql_pipeline.cpp
    sql/sql_pipeline.hpp
    sql/sql_pipeline_statement.cpp
    sql/sql_pipeline_statement.hpp
    sql/sql_query_cache.hpp
    sql/sql_query_plan.cpp
    sql/sql_query_plan.hpp
    sql/sql_identifier.cpp
    sql/sql_identifier.hpp
    sql/sql_identifier_resolver.cpp
    sql/sql_identifier_resolver.hpp
    sql/sql_identifier_resolver_proxy.cpp
    sql/sql_identifier_resolver_proxy.hpp
    sql/sql_translator.cpp
    sql/sql_translator.hpp
    storage/base_column.cpp
    storage/base_column_encoder.hpp
    storage/base_column.hpp
    storage/base_dictionary_column.hpp
    storage/base_encoded_column.cpp
    storage/base_encoded_column.hpp
    storage/base_value_column.hpp
    storage/chunk_access_counter.cpp
    storage/chunk_access_counter.hpp
    storage/chunk.cpp
    storage/chunk_encoder.cpp
    storage/chunk_encoder.hpp
    storage/chunk.hpp
    storage/column_encoding_utils.cpp
    storage/column_encoding_utils.hpp
    storage/column_iterables/any_column_iterable.hpp
    storage/column_iterables/any_column_iterator.hpp
    storage/column_iterables/base_column_iterators.hpp
    storage/column_iterables/chunk_offset_mapping.cpp
    storage/column_iterables/chunk_offset_mapping.hpp
    storage/column_iterables/column_iterator_values.hpp
    storage/column_iterables/constant_value_iterable.hpp
    storage/column_iterables/create_iterable_from_attribute_vector.hpp
    storage/column_iterables.hpp
    storage/abstract_column_visitor.hpp
    storage/create_iterable_from_column.hpp
    storage/dictionary_column/attribute_vector_iterable.hpp
    storage/dictionary_column.cpp
    storage/dictionary_column/dictionary_column_iterable.hpp
    storage/dictionary_column/dictionary_encoder.hpp
    storage/dictionary_column.hpp
    storage/encoding_type.hpp
    storage/fixed_string_dictionary_column.cpp
    storage/fixed_string_dictionary_column.hpp
    storage/fixed_string_dictionary_column/fixed_string.cpp
    storage/fixed_string_dictionary_column/fixed_string.hpp
    storage/fixed_string_dictionary_column/fixed_string_vector.cpp
    storage/fixed_string_dictionary_column/fixed_string_vector.hpp
    storage/fixed_string_dictionary_column/fixed_string_vector_iterator.cpp
    storage/fixed_string_dictionary_column/fixed_string_vector_iterator.hpp
    storage/frame_of_reference_column.cpp
    storage/frame_of_reference_column.hpp
    storage/frame_of_reference/frame_of_reference_encoder.hpp
    storage/frame_of_reference/frame_of_reference_iterable.hpp
    storage/index/adaptive_radix_tree/adaptive_radix_tree_index.cpp
    storage/index/adaptive_radix_tree/adaptive_radix_tree_index.hpp
    storage/index/adaptive_radix_tree/adaptive_radix_tree_nodes.cpp
    storage/index/adaptive_radix_tree/adaptive_radix_tree_nodes.hpp
    storage/index/b_tree/b_tree_index.cpp
    storage/index/b_tree/b_tree_index.hpp
    storage/index/b_tree/b_tree_index_impl.cpp
    storage/index/b_tree/b_tree_index_impl.hpp
    storage/index/base_index.cpp
    storage/index/base_index.hpp
    storage/index/column_index_type.hpp
    storage/index/group_key/composite_group_key_index.cpp
    storage/index/group_key/composite_group_key_index.hpp
    storage/index/group_key/group_key_index.cpp
    storage/index/group_key/group_key_index.hpp
    storage/index/group_key/variable_length_key_base.cpp
    storage/index/group_key/variable_length_key_base.hpp
    storage/index/group_key/variable_length_key.cpp
    storage/index/group_key/variable_length_key.hpp
    storage/index/group_key/variable_length_key_proxy.cpp
    storage/index/group_key/variable_length_key_proxy.hpp
    storage/index/group_key/variable_length_key_store.cpp
    storage/index/group_key/variable_length_key_store.hpp
    storage/index/index_info.hpp
    storage/materialize.hpp
    storage/mvcc_columns.cpp
    storage/mvcc_columns.hpp
    storage/numa_placement_manager.cpp
    storage/numa_placement_manager.hpp
    storage/proxy_chunk.cpp
    storage/proxy_chunk.hpp
    storage/reference_column.cpp
    storage/reference_column.hpp
    storage/reference_column/reference_column_iterable.hpp
    storage/resolve_encoded_column_type.hpp
    storage/run_length_column.cpp
    storage/run_length_column.hpp
    storage/run_length_column/run_length_column_iterable.hpp
    storage/run_length_column/run_length_encoder.hpp
    storage/lqp_view.cpp
    storage/lqp_view.hpp
    storage/storage_manager.cpp
    storage/storage_manager.hpp
    storage/table_column_definition.cpp
    storage/table_column_definition.hpp
    storage/table.cpp
    storage/table.hpp
    storage/value_column.cpp
    storage/value_column.hpp
    storage/value_column/null_value_vector_iterable.hpp
    storage/value_column/value_column_iterable.hpp
    storage/vector_compression/base_compressed_vector.hpp
    storage/vector_compression/base_vector_compressor.hpp
    storage/vector_compression/base_vector_decompressor.hpp
    storage/vector_compression/compressed_vector_type.hpp
    storage/vector_compression/fixed_size_byte_aligned/fixed_size_byte_aligned_compressor.cpp
    storage/vector_compression/fixed_size_byte_aligned/fixed_size_byte_aligned_compressor.hpp
    storage/vector_compression/fixed_size_byte_aligned/fixed_size_byte_aligned_decompressor.hpp
    storage/vector_compression/fixed_size_byte_aligned/fixed_size_byte_aligned_utils.hpp
    storage/vector_compression/fixed_size_byte_aligned/fixed_size_byte_aligned_vector.hpp
    storage/vector_compression/resolve_compressed_vector_type.hpp
    storage/vector_compression/simd_bp128/oversized_types.hpp
    storage/vector_compression/simd_bp128/simd_bp128_compressor.cpp
    storage/vector_compression/simd_bp128/simd_bp128_compressor.hpp
    storage/vector_compression/simd_bp128/simd_bp128_decompressor.cpp
    storage/vector_compression/simd_bp128/simd_bp128_decompressor.hpp
    storage/vector_compression/simd_bp128/simd_bp128_iterator.cpp
    storage/vector_compression/simd_bp128/simd_bp128_iterator.hpp
    storage/vector_compression/simd_bp128/simd_bp128_packing.cpp
    storage/vector_compression/simd_bp128/simd_bp128_packing.hpp
    storage/vector_compression/simd_bp128/simd_bp128_vector.cpp
    storage/vector_compression/simd_bp128/simd_bp128_vector.hpp
    storage/vector_compression/vector_compression.cpp
    storage/vector_compression/vector_compression.hpp
    strong_typedef.hpp
    tasks/chunk_compression_task.cpp
    tasks/chunk_compression_task.hpp
    tasks/chunk_metrics_collection_task.cpp
    tasks/chunk_metrics_collection_task.hpp
    tasks/chunk_migration_task.cpp
    tasks/chunk_migration_task.hpp
    tasks/migration_preparation_task.cpp
    tasks/migration_preparation_task.hpp
    tasks/server/abstract_server_task.hpp
    tasks/server/bind_server_prepared_statement_task.cpp
    tasks/server/bind_server_prepared_statement_task.hpp
    tasks/server/create_pipeline_task.cpp
    tasks/server/create_pipeline_task.hpp
    tasks/server/execute_server_prepared_statement_task.cpp
    tasks/server/execute_server_prepared_statement_task.hpp
    tasks/server/execute_server_query_task.cpp
    tasks/server/execute_server_query_task.hpp
    tasks/server/load_server_file_task.cpp
    tasks/server/load_server_file_task.hpp
    type_cast.hpp
    type_comparison.hpp
    types.cpp
    types.hpp
    uid_allocator.hpp
    utils/assert.hpp
    utils/boost_default_memory_resource.cpp
    utils/copyable_atomic.hpp
    utils/cuckoo_hashtable.hpp
    utils/enum_constant.hpp
    utils/filesystem.hpp
    utils/format_bytes.cpp
    utils/format_bytes.hpp
    utils/format_duration.cpp
    utils/format_duration.hpp
    utils/load_table.cpp
    utils/load_table.hpp
    utils/murmur_hash.cpp
    utils/murmur_hash.hpp
    utils/numa_memory_resource.cpp
    utils/numa_memory_resource.hpp
    utils/pausable_loop_thread.cpp
    utils/pausable_loop_thread.hpp
    utils/performance_warning.cpp
    utils/performance_warning.hpp
    utils/print_directed_acyclic_graph.hpp
    utils/scoped_locking_ptr.hpp
    utils/template_type.hpp
    utils/timer.cpp
    utils/timer.hpp
    ${CMAKE_BINARY_DIR}/version.hpp
)

set(
    LIBRARIES
    pthread
    sqlparser
    ${TBB_LIBRARY}
)

if (${ENABLE_JIT_SUPPORT})
    include(${CMAKE_SOURCE_DIR}/cmake/EmbedLLVM.cmake)
    set(JIT_EMBEDDED_SOURCES
        # Files listed here will be embedded into the binary as LLVM-IR
        operators/jit_operator/jit_types.cpp
        operators/jit_operator/jit_types.hpp
        operators/jit_operator/jit_operations.cpp
        operators/jit_operator/jit_operations.hpp
        operators/jit_operator/operators/abstract_jittable.hpp
        operators/jit_operator/operators/abstract_jittable_sink.hpp
        operators/jit_operator/operators/jit_aggregate.cpp
        operators/jit_operator/operators/jit_aggregate.hpp
        operators/jit_operator/operators/jit_compute.cpp
        operators/jit_operator/operators/jit_compute.hpp
        operators/jit_operator/operators/jit_expression.cpp
        operators/jit_operator/operators/jit_expression.hpp
        operators/jit_operator/operators/jit_filter.cpp
        operators/jit_operator/operators/jit_filter.hpp
        operators/jit_operator/operators/jit_read_tuples.cpp
        operators/jit_operator/operators/jit_read_tuples.hpp
        operators/jit_operator/operators/jit_write_tuples.cpp
        operators/jit_operator/operators/jit_write_tuples.hpp
    )
    embed_llvm(LLVM_BUNDLE_FILE jit_llvm_bundle ${JIT_EMBEDDED_SOURCES})
    set(
        SOURCES
        operators/jit_operator/jit_aware_lqp_translator.cpp
        operators/jit_operator/jit_aware_lqp_translator.hpp
        operators/jit_operator/specialization/jit_compiler.cpp
        operators/jit_operator/specialization/jit_compiler.hpp
        operators/jit_operator/specialization/jit_code_specializer.cpp
        operators/jit_operator/specialization/jit_code_specializer.hpp
        operators/jit_operator/specialization/jit_repository.cpp
        operators/jit_operator/specialization/jit_repository.hpp
        operators/jit_operator/specialization/jit_runtime_pointer.cpp
        operators/jit_operator/specialization/jit_runtime_pointer.hpp
        operators/jit_operator/specialization/llvm/CloneFunction.cpp
        operators/jit_operator/specialization/llvm/InlineFunction.cpp
        operators/jit_operator/specialization/llvm_extensions.cpp
        operators/jit_operator/specialization/llvm_extensions.hpp
        operators/jit_operator/specialization/llvm_utils.cpp
        operators/jit_operator/specialization/llvm_utils.hpp
        operators/jit_operator_wrapper.cpp
        operators/jit_operator_wrapper.hpp
        ${SOURCES}
        ${JIT_EMBEDDED_SOURCES}
        ${LLVM_BUNDLE_FILE})
    # Prevent clang from complaining about unused defines when compiling the assembly file
    set_property(SOURCE ${LLVM_BUNDLE_FILE} PROPERTY COMPILE_FLAGS -Qunused-arguments)
    set(LIBRARIES ${LIBRARIES} ${LLVM_LIBRARY})
endif()

if (${ENABLE_NUMA_SUPPORT})
    set(LIBRARIES ${LIBRARIES} ${NUMA_LIBRARY} hpinuma_msource_s)
endif()

# Configure the regular hyrise library used for tests/server/playground...
add_library(hyrise STATIC ${SOURCES})
target_link_libraries(hyrise ${LIBRARIES})
target_include_directories(hyrise PUBLIC ${CMAKE_BINARY_DIR})